<resources>
    <string name="app_name">Barista</string>
    <string name="customer_qr"><u><b>QR kodu baristaya gösteriniz.</b></u></string>
    <string name="customer_coin">Coin kullanacaksanız ödeme\n anında belirtiniz.</string>
    <string name="price_dialog_enter_price">Yüklemek istediğiniz tutarı giriniz</string>
    <string name="price_dialog_15">15₺</string>
    <string name="price_dialog_30">30₺</string>
    <string name="price_dialog_50">50₺</string>
    <string name="price_dialog_other">Diğer</string>
    <string name="price_dialog_enter_price_et">Tutarı giriniz</string>
    <string name="price_dialog_cancel">Vazgeç</string>
    <string name="price_dialog_okay">Tamam</string>
    <string name="choose_type_cashier">Kasiyerim</string>
    <string name="choose_type_customer">Müşteriyim (Mobil ödeme)</string>
    <string name="coffee_beans">coffee beans</string>
    <string name="qr_code">QR code</string>
    <string name="total_amount_balance">Bakiye:</string>
    <string name="total_amount_credit_card">Kredi kartı ile öde</string>
    <string name="credit_card">credit card</string>
    <string name="total_amount_coin_wallet">Coin Wallet ile öde</string>
    <string name="coin_wallet">coin wallet</string>
    <string name="crash">crash</string>
    <string name="insufficient_balance">insufficient balance</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="payment_success">ÖDEMENİZ ALINDI</string>
    <string name="background_coffee_image">background coffee image</string>
    <string name="homepage">homepage</string>
</resources>