<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/barista_grey"
    tools:context=".ui.choosetype.ChooseTypeFragment">

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="1"
        android:foregroundGravity="center"
        android:rowCount="2"
        android:useDefaultMargins="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button_cashier"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button_frame_unfilled"
            android:backgroundTint="@color/barista_red_dark"
            android:fontFamily="sans-serif-medium"
            android:text="@string/choose_type_cashier"
            android:textAllCaps="false"
            android:textColor="@color/barista_grey"
            android:textSize="17sp" />

        <Button
            android:id="@+id/button_customer"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button_frame"
            android:fontFamily="sans-serif-medium"
            android:text="@string/choose_type_customer"
            android:textAllCaps="false"
            android:textColor="@color/barista_red_dark"
            android:textSize="17sp"
            tools:layout_editor_absoluteX="31dp"
            tools:layout_editor_absoluteY="99dp" />

    </GridLayout>

    <ImageView
        android:id="@+id/iv_coffee"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/coffee_beans"
        android:src="@drawable/coffee"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_crashlytics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/crash"
        android:src="@drawable/crashlytics"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>