<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <ProgressBar
        android:id="@+id/progressBarPayment"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cwPayment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:foregroundGravity="center"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/price_dialog_enter_price"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/rg_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/custom_radio_selector"
                    android:button="@android:color/transparent"
                    android:elevation="4dp"
                    android:gravity="center"
                    android:text="@string/price_dialog_15"
                    android:textColor="@drawable/custom_radio_text" />

                <RadioButton
                    android:id="@+id/rb_30"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/custom_radio_selector"
                    android:button="@android:color/transparent"
                    android:elevation="4dp"
                    android:gravity="center"
                    android:text="@string/price_dialog_30"
                    android:textColor="@drawable/custom_radio_text" />

                <RadioButton
                    android:id="@+id/rb_50"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/custom_radio_selector"
                    android:button="@android:color/transparent"
                    android:elevation="4dp"
                    android:gravity="center"
                    android:text="@string/price_dialog_50"
                    android:textColor="@drawable/custom_radio_text" />

                <RadioButton
                    android:id="@+id/rb_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:layout_marginEnd="12dp"
                    android:background="@android:color/transparent"
                    android:button="@android:color/transparent"
                    android:elevation="4dp"
                    android:gravity="center"
                    android:text="@string/price_dialog_other" />

            </RadioGroup>

            <EditText
                android:id="@+id/editTextNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/price_dialog_enter_price_et"
                android:inputType="number"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                android:gravity="center">

                <Button
                    android:id="@+id/button_cancel"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/custom_button_frame"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/price_dialog_cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/barista_red_dark"
                    android:textSize="17sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/button_okay"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:background="@drawable/custom_button_frame_unfilled"
                    android:backgroundTint="@color/barista_green"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/price_dialog_okay"
                    android:textAllCaps="false"
                    android:textColor="@color/barista_grey"
                    android:textSize="17sp"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>